Make localstorage work

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script defer src="script.js"></script>
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
-	<body class="px-[20%] flex justify-center items-center flex-col gap-4 p-4">
+	<body class="px-[20%] bg-sky-100 flex justify-center items-center flex-col gap-4 p-4">
 		<h1 class="text-4xl font-bold text-center">Cadastros de produtos</h1>
 		<div class="grid grid-cols-2 justify-center items-center gap-4 mx-auto">
 			<label for="name"
@@ -54,6 +54,9 @@
 						<th>Nome</th>
 						<th>Quantidade</th>
 						<th>Preço</th>
+						<th>Descrição</th>
+						<th>Prateleira</th>
+						<th>Categoria</th>
 					</tr>
 				</thead>
 				<tbody></tbody>
